Fix: avoid jumping prompt

--- a/src/app/Balloon.App.Office/styles/style.scss
+++ b/src/app/Balloon.App.Office/styles/style.scss
@@ -1,3 +1,7 @@
+#fs-libreoffice-prompt {
+  display: none;
+}
+
 #fs-office-join-prompt {
   .fs-prompt-window-content {
     ul {
